--- a/tests/e2e/test.html
+++ b/tests/e2e/test.html
@@ -205,6 +205,7 @@
 
 
 <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../bower_components/q/q.js"></script>
 <script src="../../bower_components/angular/angular.min.js"></script>
 <script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <script src="../../dist/angular-typeaheadjs.min.js"></script>
