--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
 <!--<script src="bower_components/handlebars/handlebars.min.js"></script>-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/q/q.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <script src="bower_components/angular-typeaheadjs/dist/angular-typeaheadjs.min.js"></script>
