--- a/tests/e2e/test.html
+++ b/tests/e2e/test.html
@@ -89,7 +89,7 @@
 <body ng-app="myApp">
 
 
-<div class="usecase1" ng-controller="UseCase1Controller as vm">
+<!--<div class="usecase1" ng-controller="UseCase1Controller as vm">
     Use case 1: [prefetch / remote / no options]:<br/>
 
     <angular-typeaheadjs angty-ttoptions="{{vm.ttOptions}}">
@@ -199,6 +199,19 @@
 
     <span class="trigger">{{vm.events.trigger}}</span>
 
+</div>-->
+
+<div class="usecase10" ng-controller="UseCase10Controller as vm">
+    Use case 10: [bhfunctions / prefetch / remote / callbacks - selectOnAutocomplete=true / clear=true]:<br/>
+
+    <angular-typeaheadjs angty-bhfunctions="vm.bhFunctions" angty-ttoptions="{{vm.ttOptions}}" angty-options="{{vm.options}}"
+                         angty-onselect="vm.onselect"
+                         angty-onautocomplete="vm.onautocomplete">
+        <input class="typeahead" type="text" id="usecase10"/>
+    </angular-typeaheadjs>
+
+    <span class="trigger">{{vm.events.trigger}}</span>
+
 </div>
 
 <input id="dummy" type="text" style="border:0px;"/>
@@ -207,8 +220,10 @@
 <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../../bower_components/q/q.js"></script>
 <script src="../../bower_components/angular/angular.min.js"></script>
-<script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
-<script src="../../dist/angular-typeaheadjs.min.js"></script>
+<!--<script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>-->
+<script src="../../bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+<!--<script src="../../dist/angular-typeaheadjs.min.js"></script>-->
+<script src="../../src/angular-typeaheadjs.js"></script>
 <script>
 
 (function () {
@@ -222,7 +237,8 @@
             .controller('UseCase6Controller', [ '$scope', UseCase6Controller ])
             .controller('UseCase7Controller', [ '$scope', UseCase7Controller ])
             .controller('UseCase8Controller', [ '$scope', UseCase8Controller ])
-            .controller('UseCase9Controller', [ '$scope', UseCase9Controller ]);
+            .controller('UseCase9Controller', [ '$scope', UseCase9Controller ])
+            .controller('UseCase10Controller', [ '$scope', UseCase10Controller ]);
     function UseCase1Controller($scope) {
         var vm = this;
         vm.ttOptions = {
@@ -555,6 +571,53 @@
             addTrigger(7);
         };
     }
+
+    function UseCase10Controller($scope) {
+        var vm = this;
+        vm.bhFunctions = {
+            identify: function(obj) {
+                obj.name = 'x' + obj.name;
+                return obj.name;
+            },
+            sorter: function compare(a, b) {
+                addTrigger(12);
+                if (a<b) {
+                    return -1;
+                }
+                if (a>b) {
+                    return 1;
+                }
+                return 0;
+            }
+        }
+        vm.ttOptions = {
+            prefetch: '/tests/assets/prefetch.json',
+            remote: '/tests/assets/%QUERY.json'
+        };
+        vm.options = {
+            clear: true,
+            selectOnAutocomplete: true
+        };
+        vm.events = {
+            names: ['active', 'idle', 'open', 'close', 'change', 'render', 'select', 'autocomplete', 'cursorchange', 'asyncrequest', 'asynccancel', 'asyncreceive',
+                'sorter'],
+            trigger: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+        };
+        var addTrigger = function (index) {
+            $scope.$apply(function () {
+                vm.events.trigger[index]++;
+            });
+            //console.log(index,[].slice.call(arguments, 1));
+        }
+        vm.onselect = function () {
+            console.log(arguments);
+            addTrigger(6);
+        };
+        vm.onautocomplete = function () {
+            addTrigger(7);
+        };
+    }
+
 }());
 
 </script>
